Fix SlideUpH2 component to wrap the h2 lines appropriately

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,11 @@
     background-color: #5881a1;
     color: white;
   }
+
+  h2,
+  h3 {
+    text-wrap: balance;
+  }
 }
 
 @layer components {
